--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,87 +11,14 @@
 	<link rel="stylesheet" href="{% static "css/AdminLTE.min.css" %}">
 	<link rel="stylesheet" href="{% static "css/skins/skin-blue.min.css" %}">
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+{% block body %}
+<body class="hold-transition skin-blue sidebar-mini sidebar-collapse">
 	<div class="wrapper">
 		<header class="main-header">
-			<a href="index2.html" class="logo">
-				<span class="logo-mini"><b>UMG</b></span>
-				<span class="logo-lg"><b>Conta</b>UMG</span>
-			</a>
-			<nav class="navbar navbar-static-top" role="navigation">
-				<a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-					<span class="sr-only">Toggle navigation</span>
-				</a>
-				<div class="navbar-custom-menu">
-					<ul class="nav navbar-nav">
-						<li class="dropdown user user-menu">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-								<img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-								<span class="hidden-xs">Luis Contreras</span>
-							</a>
-							<ul class="dropdown-menu">
-								<li class="user-header">
-									<img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-
-									<p>
-										Luis Contreras - Ingeniería
-										<small>Member since Nov. 2012</small>
-									</p>
-								</li>
-								<li class="user-body">
-									<div class="row">
-										<div class="col-xs-4 text-center">
-											<a href="#">Followers</a>
-										</div>
-										<div class="col-xs-4 text-center">
-											<a href="#">Sales</a>
-										</div>
-										<div class="col-xs-4 text-center">
-											<a href="#">Friends</a>
-										</div>
-									</div>
-								</li>
-								<li class="user-footer">
-									<div class="pull-left">
-										<a href="#" class="btn btn-default btn-flat">Profile</a>
-									</div>
-									<div class="pull-right">
-										<a href="#" class="btn btn-default btn-flat">Sign out</a>
-									</div>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</nav>
+			{% include "base/base-header.html" %}
 		</header>
 		<aside class="main-sidebar">
-			<section class="sidebar">
-				<div class="user-panel">
-					<div class="pull-left image">
-						<img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-					</div>
-					<div class="pull-left info">
-						<p>Alexander Pierce</p>
-						<a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-					</div>
-				</div>
-				<ul class="sidebar-menu" data-widget="tree">
-					<li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-					<li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-					<li class="treeview">
-						<a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
-							<span class="pull-right-container">
-								<i class="fa fa-angle-left pull-right"></i>
-							</span>
-						</a>
-						<ul class="treeview-menu">
-							<li><a href="#">Link in level 2</a></li>
-							<li><a href="#">Link in level 2</a></li>
-						</ul>
-					</li>
-				</ul>
-			</section>
+			{% include "base/base-sidebar.html" %}
 		</aside>
 		<div class="content-wrapper">
 			<section class="content-header">
@@ -107,6 +34,8 @@
 		</div>
 	</div>
 </body>
+{% endblock body %}
+
 <script src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
 <!-- Bootstrap 3.3.7 -->
 <script src="{% static "bower_components/bootstrap/dist/js/bootstrap.min.js" %}"></script>
