--- a/templates/inventario/activofijo_list.html
+++ b/templates/inventario/activofijo_list.html
@@ -5,7 +5,7 @@
 {% endblock content_header %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="box">
@@ -32,6 +32,13 @@
 								<td>{{ activofijo.precio }}</td>
 								<td>{{ activofijo.saldo }}</td>
 								<td>{{ activofijo.depreciacion }}</td>
+								<td>
+									<ul>
+									{% for saldo in activofijo.historico %}
+										<li>Q{{ saldo.monto|floatformat:"2" }} -- {{ saldo.mes }} -- {{ saldo.depreciado|floatformat:"2" }}</li>
+									{% endfor %}
+									</ul>
+								</td>
 							</tr>
 							{% endfor %}
 						</tbody>
