--- a/templates/pagos/facturacompra_update.html
+++ b/templates/pagos/facturacompra_update.html
@@ -68,10 +68,12 @@
 	</div>
 	<!-- /.row -->
 
+	{% if not facturacompra.completa %}
 	<div class="row">
 		<!-- accepted payments column -->
 		<div class="col-xs-6">
 			<div class="table-responsive">
+
 				<form action="{% url 'facturadetalle_add' %}" method="post">
 					{% csrf_token %}
 					<table class="table">
@@ -110,7 +112,7 @@
 	<!-- /.row -->
 
 	<!-- this row will not appear when printing -->
-	<div class="row no-print">
+	<div class="row">
 		<div class="col-xs-12">
 			<a href="invoice-print.html" target="_blank" class="btn btn-default"><i class="fa fa-print"></i> Print</a>
 			<form method="post" action="{% url 'factura_update' pk=facturacompra.id %}">
@@ -122,5 +124,45 @@
 			</form>
 		</div>
 	</div>
+	{% else %}
+	<div class="row">
+		<div class="col-xs-6">
+			<p class="lead">Fecha de vencimiento {{ facturacompra.fecha_vencimiento|date:"d/m/Y" }}</p>
+			<div class="table-responsive">
+				<table class="table">
+					<tr>
+						<th style="width:50%">Total:</th>
+						<td>Q {{ facturacompra.total }}</td>
+					</tr>
+					<tr>
+						<th>Pagado:</th>
+						<td>Q {{ facturacompra.pagado }}</td>
+					</tr>
+					<tr>
+						<th>Por pagar:</th>
+						<td>Q {{ facturacompra.saldo }}</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+
+		<div class="col-xs-6">
+			<div class="table-responsive">
+
+				<form action="{% url 'pago_add' %}" method="post">
+					{% csrf_token %}
+					<table class="table">
+						{{ cheque_form.as_table }}
+						<tr>
+							<td colspan="2" class="pull-right">
+								<input type="submit" class="btn btn-primary" value="Agregar">
+							</td>
+						</tr>
+					</table>
+				</form>
+			</div>
+		</div>
+	</div>
+	{% endif %}
 </section>
 {% endblock content %}
