--- a/templates/bancos/banco_detail.html
+++ b/templates/bancos/banco_detail.html
@@ -12,7 +12,7 @@
 				<div class="box-header">
 					<h3 class="box-title">Cuentas en este banco</h3>
 					<span class="box-tools pull-right">
-						<a href="{% url 'cuenta_add' %}" class="btn btn-info">Nueva</a>
+						<a href="{% url 'cuenta_add' %}" class="btn btn-info">Agregar cuentas</a>
 					</span>
 				</div>
 				<div class="box-body">
