--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,18 +8,24 @@
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<link rel="stylesheet" href="{% static "bower_components/bootstrap/dist/css/bootstrap.min.css" %}">
 	<link rel="stylesheet" href="{% static "bower_components/font-awesome/css/font-awesome.min.css" %}">
+	<link rel="stylesheet" href="{% static "bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" %}">
 	<link rel="stylesheet" href="{% static "css/AdminLTE.min.css" %}">
 	<link rel="stylesheet" href="{% static "css/skins/skin-blue.min.css" %}">
 </head>
 {% block body %}
-<body class="hold-transition skin-blue sidebar-mini sidebar-collapse">
+<body class="hold-transition skin-blue sidebar-collapse sidebar-mini">
 	<div class="wrapper">
+		<!-- Header -->
 		<header class="main-header">
 			{% include "base/base-header.html" %}
 		</header>
+
+		<!-- Sidebar -->
 		<aside class="main-sidebar">
 			{% include "base/base-sidebar.html" %}
 		</aside>
+
+		<!-- Contenido -->
 		<div class="content-wrapper">
 			<section class="content-header">
 				{% block content_header %}
@@ -37,8 +43,9 @@
 {% endblock body %}
 
 <script src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
-<!-- Bootstrap 3.3.7 -->
 <script src="{% static "bower_components/bootstrap/dist/js/bootstrap.min.js" %}"></script>
-<!-- AdminLTE App -->
+<script src="{% static "bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js" %}"></script>
+<script src="{% static "bower_components/bootstrap-datepicker/dist/locales/bootstrap-datepicker.es.min.js" %}"></script>
 <script src="{% static "js/adminlte.min.js" %}"></script>
+<script src="{% static "js/main.js" %}"></script>
 </html>
