--- a/templates/inventario/activofijo_list.html
+++ b/templates/inventario/activofijo_list.html
@@ -30,7 +30,7 @@
 								</td>
 								<td>{{ activofijo.fecha_registro|date:"Y-m-d" }}</td>
 								<td>{{ activofijo.precio }}</td>
-								<td>{{ activofijo.saldo }}</td>
+								<td>{{ activofijo.saldo.monto }}</td>
 								<td>{{ activofijo.depreciacion }}</td>
 								<td>
 									<ul>
