--- a/templates/bancos/chequera_form.html
+++ b/templates/bancos/chequera_form.html
@@ -1,4 +1,5 @@
 {% extends "base/base.html" %}
+{% load widget_tweaks %}
 
 {% block content_header %}
 <h1>Chequera</h1>
@@ -12,11 +13,16 @@
 				<div class="box-header">
 					<h3 class="box-title">Información de la chequera</h3>
 				</div>
-				<div class="box-body">
+				<div class="box-body table-responsive">
 					<form action="{{ action }}" method="post">
 						{% csrf_token %}
 						<table class="table">
-							{{ form.as_table }}
+							{% for field in form %}
+							<tr>
+								<th>{{ field.label_tag }}</th>
+								<td>{{ field|add_class:"form-control" }}</td>
+							</tr>
+							{% endfor %}
 							<tr>
 								<td colspan="2">
 									<input type="submit" class="btn btn-primary" value="Guardar">
