--- a/templates/bancos/cuentabanco_form.html
+++ b/templates/bancos/cuentabanco_form.html
@@ -1,4 +1,5 @@
 {% extends "base/base.html" %}
+{% load widget_tweaks %}
 
 {% block content_header %}
 <h1>Cuentas bancarias</h1>
@@ -16,7 +17,12 @@
 					<form action="{{ action }}" method="post">
 						{% csrf_token %}
 						<table class="table">
-							{{ form.as_table }}
+							{% for field in form %}
+							<tr>
+								<th>{{ field.label_tag }}</th>
+								<td>{{ field|add_class:"form-control" }}</td>
+							</tr>
+							{% endfor %}
 							<tr>
 								<td colspan="2">
 									<input type="submit" class="btn btn-primary" value="Guardar">
