--- a/templates/base/base-header.html
+++ b/templates/base/base-header.html
@@ -1,10 +1,13 @@
-<a href="" class="logo">
+<a href="{% url 'home' %}" class="logo">
 	<span class="logo-mini"><b><i class="fa fa-paper-plane-o" aria-hidden="true"></i></b></span>
 	<span class="logo-lg"><b><i class="fa fa-paper-plane-o" aria-hidden="true"></i> UMG</b></span>
 </a>
 <nav class="navbar navbar-static-top" role="navigation">
-	<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+	<a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
 		<span class="sr-only">Cambiar navegación</span>
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
+		<span class="icon-bar"></span>
 	</a>
 	<div class="navbar-custom-menu">
 		<ul class="nav navbar-nav">
