--- a/templates/pagos/facturacompra_update.html
+++ b/templates/pagos/facturacompra_update.html
@@ -1,4 +1,5 @@
 {% extends "base/base.html" %}
+{% load widget_tweaks %}
 
 {% block content_header %}
 <h1>Factura <small>#{{ facturacompra.id }}</small></h1>
@@ -10,7 +11,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<h2 class="page-header">
-				<i class="fa fa-globe"></i> AdminLTE, Inc.
+				<i class="fa fa-globe"></i> Compra
 				<small class="pull-right">Fecha: {{ facturacompra.fecha_emision|date:"d/m/Y" }}</small>
 			</h2>
 		</div>
@@ -67,11 +68,13 @@
 		<!-- /.col -->
 	</div>
 	<!-- /.row -->
-
+</section>
+<div class="container-fluid">
 	{% if not facturacompra.completa %}
 	<div class="row">
 		<!-- accepted payments column -->
 		<div class="col-xs-6">
+			<p class="lead">Agregar producto</p>
 			<div class="table-responsive">
 
 				<form action="{% url 'facturadetalle_add' %}" method="post">
@@ -125,44 +128,57 @@
 		</div>
 	</div>
 	{% else %}
-	<div class="row">
+	<div class="row-fluid">
 		<div class="col-xs-6">
-			<p class="lead">Fecha de vencimiento {{ facturacompra.fecha_vencimiento|date:"d/m/Y" }}</p>
-			<div class="table-responsive">
-				<table class="table">
-					<tr>
-						<th style="width:50%">Total:</th>
-						<td>Q {{ facturacompra.total }}</td>
-					</tr>
-					<tr>
-						<th>Pagado:</th>
-						<td>Q {{ facturacompra.pagado }}</td>
-					</tr>
-					<tr>
-						<th>Por pagar:</th>
-						<td>Q {{ facturacompra.saldo }}</td>
-					</tr>
-				</table>
+			<div class="box box-warning">
+				<div class="box-header">
+					<h3 class="box-title">Fecha de vencimiento {{ facturacompra.fecha_vencimiento|date:"d/m/Y" }}</h3>
+				</div>
+				<div class="box-body table-responsive">
+					<table class="table table-hover">
+						<tr>
+							<th style="width:50%">Total:</th>
+							<td>Q {{ facturacompra.total }}</td>
+						</tr>
+						<tr>
+							<th>Pagado:</th>
+							<td>Q {{ facturacompra.pagado }}</td>
+						</tr>
+						<tr>
+							<th>Por pagar:</th>
+							<td>Q {{ facturacompra.saldo }}</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 
 		<div class="col-xs-6">
-			<div class="table-responsive">
-
-				<form action="{% url 'pago_add' %}" method="post">
-					{% csrf_token %}
-					<table class="table">
-						{{ cheque_form.as_table }}
-						<tr>
-							<td colspan="2" class="pull-right">
-								<input type="submit" class="btn btn-primary" value="Agregar">
-							</td>
-						</tr>
-					</table>
-				</form>
+			<div class="box box-success">
+				<div class="box-header">
+					<h3 class="box-title">Agregar pago</h3>
+				</div>
+				<div class="box-body table-responsive">
+					<form action="{% url 'pago_add' %}" method="post">
+						{% csrf_token %}
+						<table class="table">
+							{% for field in cheque_form %}
+							<tr>
+								<td>{{ field.label_tag }}</td>
+								<td>{{ field|add_class:"form-control" }}</td>
+							</tr>
+							{% endfor %}
+							<tr>
+								<td colspan="2" class="pull-right">
+									<input type="submit" class="btn btn-primary" value="Agregar">
+								</td>
+							</tr>
+						</table>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
 	{% endif %}
-</section>
+</div>
 {% endblock content %}
