--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,12 +8,16 @@
 	<title>Sistema contable</title>
 	{% endblock page_title %}
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-	<link rel="stylesheet" href="{% static "bower_components/bootstrap/dist/css/bootstrap.min.css" %}">
-	<link rel="stylesheet" href="{% static "bower_components/font-awesome/css/font-awesome.min.css" %}">
-	<link rel="stylesheet" href="{% static "bower_components/select2/dist/css/select2.min.css" %}">
-	<link rel="stylesheet" href="{% static "bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" %}">
+	<link rel="stylesheet" href="{% static "components/bootstrap/dist/css/bootstrap.min.css" %}">
+	<link rel="stylesheet" href="{% static "components/font-awesome/css/font-awesome.min.css" %}">
+	<link rel="stylesheet" href="{% static "components/select2/dist/css/select2.min.css" %}">
+	<link rel="stylesheet" href="{% static "components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" %}">
 	<link rel="stylesheet" href="{% static "css/AdminLTE.min.css" %}">
 	<link rel="stylesheet" href="{% static "css/skins/skin-blue-light.min.css" %}">
+
+	{% block extra_css %}
+
+	{% endblock extra_css %}
 </head>
 {% block body %}
 <body class="hold-transition skin-blue-light sidebar-collapse sidebar-mini">
@@ -45,11 +49,15 @@
 </body>
 {% endblock body %}
 
-<script src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
-<script src="{% static "bower_components/bootstrap/dist/js/bootstrap.min.js" %}"></script>
-<script src="{% static "bower_components/select2/dist/js/select2.full.min.js" %}"></script>
-<script src="{% static "bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js" %}"></script>
-<script src="{% static "bower_components/bootstrap-datepicker/dist/locales/bootstrap-datepicker.es.min.js" %}"></script>
+<script src="{% static "components/jquery/dist/jquery.min.js" %}"></script>
+<script src="{% static "components/bootstrap/dist/js/bootstrap.min.js" %}"></script>
+<script src="{% static "components/select2/dist/js/select2.full.min.js" %}"></script>
+<script src="{% static "components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js" %}"></script>
+<script src="{% static "components/bootstrap-datepicker/dist/locales/bootstrap-datepicker.es.min.js" %}"></script>
 <script src="{% static "js/adminlte.min.js" %}"></script>
 <script src="{% static "js/main.js" %}"></script>
+
+{% block extra_js %}
+	
+{% endblock extra_js %}
 </html>
