--- a/templates/pagos/facturacompra_list.html
+++ b/templates/pagos/facturacompra_list.html
@@ -19,7 +19,7 @@
 					</span>
 				</div>
 				<div class="box-body">
-					<table class="table table-striped">
+					<table class="table table-striped table-datatables">
 						<thead>
 							<tr>
 								<th>Factura</th>
