--- a/templates/bancos/snippet_cuentabanco_list.html
+++ b/templates/bancos/snippet_cuentabanco_list.html
@@ -1,4 +1,4 @@
-<table class="table table-hover">
+<table class="table table-hover table-datatables">
 	<thead>
 		<tr>
 			{% if mostrar_banco is True %}
