--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="{% static "components/font-awesome/css/font-awesome.min.css" %}">
 	<link rel="stylesheet" href="{% static "components/select2/dist/css/select2.min.css" %}">
 	<link rel="stylesheet" href="{% static "components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" %}">
+	<link rel="stylesheet" href="{% static "css/dataTables.bootstrap.css" %}">
 	<link rel="stylesheet" href="{% static "css/AdminLTE.min.css" %}">
 	<link rel="stylesheet" href="{% static "css/skins/skin-blue-light.min.css" %}">
 
@@ -54,6 +55,8 @@
 <script src="{% static "components/select2/dist/js/select2.full.min.js" %}"></script>
 <script src="{% static "components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js" %}"></script>
 <script src="{% static "components/bootstrap-datepicker/dist/locales/bootstrap-datepicker.es.min.js" %}"></script>
+<script src="{% static "js/jquery.dataTables.min.js" %}"></script>
+<script src="{% static "js/dataTables.bootstrap.min.js" %}"></script>
 <script src="{% static "js/adminlte.min.js" %}"></script>
 <script src="{% static "js/main.js" %}"></script>
 
