--- a/templates/inventario/activofijo_list.html
+++ b/templates/inventario/activofijo_list.html
@@ -12,7 +12,7 @@
 				<div class="box-header">
 				</div>
 				<div class="box-body table-responsive">
-					<table class="table table-striped table-hover">
+					<table class="table table-striped table-hover table-datatables">
 						<thead>
 							<tr>
 								<th>Nombre</th>
